--- a/index.html
+++ b/index.html
@@ -38,15 +38,15 @@
       
         <div class="row">
             <div class="col-2"></div>
-            <div class="col-8">
-             You will be given a random number at the start of the game.
+            <div class="col-8 paragraph">
+             You will be given a <strong>random number</strong> at the start of the game.<br><br>
 
-             There are four crystals below. By clicking on a crystal you will add a specific amount of points to your total score.
-
-             You win the game by matching your total score to random number. You lose the gameif your total score goes above the random number.
-
+             There are four crystals below. By clicking on a crystal you will <strong>add a specific amount of points</strong> to your total score.
+             <br><br>
+             You win the game by matching your total score to random number. You lose the game if your total score goes above the random number.
+             <br><br>
              The value of each crystal is hidden from you until you click on it.
-
+             <br><br>
              Each time when the game starts, the game will change the values of each crystal.
             </div>
             <div class="col-2"></div>
