--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
 
              There are four crystals below. By clicking on a crystal you will <strong>add a specific amount of points</strong> to your total score.
              <br><br>
-             You win the game by matching your total score to random number. You lose the game if your total score goes above the random number.
+             You win the game by <strong>matching your total score to random number</strong>. You lose the game if your <strong>total score goes above the random number</strong>.
              <br><br>
-             The value of each crystal is hidden from you until you click on it.
+             The value of each crystal is hidden from you until you <strong>click on it</strong>.
              <br><br>
              Each time when the game starts, the game will change the values of each crystal.
             </div>
@@ -64,7 +64,7 @@
         <div class="row">
             <div class="col-2"></div>
             <div class="col-4" id="yourGoal"></div>
-            <div class="col-4" id="yourScore"><h2>Your Score:</h2></div>
+            <div class="col-4" id="yourScore"><h2>Your Score:<h2 id="userScore"></h2></h2></div>
             <div class="col-2"></div>
 
         </div>
@@ -72,7 +72,7 @@
         <div class="row">
             <div class="col-3"></div>
             <div class="col-3"> </div>
-            <div class="col-3"><h4 id="wins">Wins:</h4><br><h4 id="losses">Losses:</h4></div>
+            <div class="col-3"><h4 id="wins">Wins:<h4 id="winScore"></h4></h4><br><h4 id="losses">Losses:<h4 id="lossScore"></h4></h4></div>
             <div class="col-3"></div>
 
         </div>
