--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
 
         <div class="row">
             <div class="col-2"></div>
-            <div class="col-4" id="yourGoal"></div>
+            <div class="col-4" id="yourGoal">
+            </div>
             <div class="col-4" id="yourScore"><h2>Your Score:<h2 id="userScore"></h2></h2></div>
             <div class="col-2"></div>
 
